// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button bg prop sets button color to custom color 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #8b00a5;
  border: 0;
  width: initial;
  color: #fff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99caff;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
/>
`;

exports[`Button error prop sets button to error 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #c00;
  border: 0;
  width: initial;
  color: #fff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #eb9999;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
/>
`;

exports[`Button fullWidth prop sets width to 100% 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  border: 0;
  width: 100%;
  color: #fff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99caff;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
/>
`;

exports[`Button icon prop sets a button with an icon 1`] = `
.c2 color {
  color: #fff;
}

.c2 color:hover {
  color: #fff;
}

.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  border: 0;
  width: initial;
  color: #fff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99caff;
  border: 0;
}

.c0:hover {
  color: #fff;
}

.c1 {
  vertical-align: middle;
}

.c1:not(:last-child) {
  margin-right: 7px;
}

<button
  className="c0"
  icon="hotel"
>
  <svg
    className="c1 c2"
    color={
      Object {
        "&:hover": Object {
          "color": "#fff",
        },
        "color": "#fff",
      }
    }
    fill="currentcolor"
    height={16}
    viewBox="0 0 24 25"
    width={16}
  >
    <path
      d="M12.826 0.002c0.003-0.001 0.003-0.001 0.006-0.002-0.002 0.001-0.004 0.001-0.006 0.002z M15.311 4.563v3.49l2.086 0.751v-3.294c0 0-0.763-1.173-2.086-0.947z M21.043 7.070c0 0-0.578-1.039-1.854-0.857v3.203l1.854 0.657v-3.003z M15.311 10.711c0 0.456 0.009 3.423 0.009 3.423l2.077 0.486v-3.191c0 0-0.718-1.059-2.086-0.717z M19.189 11.919v3.076l1.854 0.445 0.003-2.921c0 0.001-0.487-0.987-1.857-0.6z M15.311 16.797v3.402l2.086 0.238v-3.218c0-0.001-0.931-0.854-2.086-0.422z M19.189 17.523v3.071l1.854 0.171v-2.883c0 0-0.779-0.852-1.854-0.359z M3.358 24.96h2.579l0.008-3.455h-2.594z M6.372 18.558c0 0-4.751 0.007-4.807 0.007-0.17 0.013-0.602 0.078-0.978 0.385-0.301 0.247-0.495 0.722-0.586 1.313 0.354 0 7.745-0.004 8.102-0.004-0.091-0.581-0.287-1.046-0.588-1.285-0.499-0.397-1.135-0.417-1.142-0.417z M23.678 14.965c-0.010-2.192 0-4.381-0.015-6.060-0.009-0.839-0.023-1.551-0.051-2.078-0.013-0.266-0.030-0.484-0.053-0.662-0.050-0.197 0.009-0.27-0.211-0.578-0.221-0.233-0.481-0.376-0.858-0.59-1.106-0.605-3.078-1.47-4.762-2.264-2.308-1.086-4.206-1.909-4.448-2.013v-0.013l-0.011 0.008c-0.007-0.003-0.016-0.007-0.016-0.007l-0.010 0.023-9.699 6.248c0 0-0.12 0.079-0.153 0.156-0.031 0.075-0.039 0.189-0.039 0.189v10.256l3.287-0.004c0.036-0.002 1.464 0.001 2.296 1.162 0.396 0.553 0.506 1.398 0.506 1.516 0 0.117-0.001 0.232-0.003 0.314-0.004 0.179 0.003 4.418 0 4.43h14.163v-0.029l0.032 0.001c0-0.002 0.051-3.791 0.051-7.972-0.001-0.672-0.002-1.355-0.005-2.034zM22.544 22.793l-9.263-0.449v-20.411c0.727 0.318 2.23 0.986 3.975 1.806 1.133 0.535 2.389 1.097 3.406 1.582 0.509 0.242 0.957 0.465 1.295 0.649 0.224 0.12 0.405 0.238 0.497 0.306 0.052 0.348 0.097 1.519 0.102 2.958 0.011 1.621 0.003 3.674 0.012 5.736 0.003 0.677 0.004 1.359 0.004 2.030-0.001 2.212-0.015 4.307-0.028 5.793z"
    />
  </svg>
</button>
`;

exports[`Button large prop sets height and font-size 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  border: 0;
  width: initial;
  color: #fff;
  height: 48px;
  font-size: 16px;
  padding: 0 22px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99caff;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
/>
`;

exports[`Button medium prop sets height and font-size 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  border: 0;
  width: initial;
  color: #fff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99caff;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
/>
`;

exports[`Button outline prop sets button to outline 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #fff;
  border: 2px solid #007aff;
  width: initial;
  color: #007aff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #fff;
  border: 2px solid #99caff;
}

.c0:hover {
  color: #99caff;
}

<button
  className="c0"
/>
`;

exports[`Button outline prop sets button to outline 2`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #fff;
  border: 2px solid #0a0;
  width: initial;
  color: #0a0;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #fff;
  border: 2px solid #99dd99;
}

.c0:hover {
  color: #99dd99;
}

<button
  className="c0"
/>
`;

exports[`Button primary prop sets button to primary 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  border: 0;
  width: initial;
  color: #fff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99caff;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
/>
`;

exports[`Button radius prop sets a custom button radius 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 5px;
  background-color: #007aff;
  border: 0;
  width: initial;
  color: #fff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99caff;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
  radius="5px"
/>
`;

exports[`Button renders 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  border: 0;
  width: initial;
  color: #fff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99caff;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
/>
`;

exports[`Button renders a button with text 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  border: 0;
  width: initial;
  color: #fff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99caff;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
>
  <span>
    Hello
  </span>
</button>
`;

exports[`Button secondary prop sets button to secondary 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #0a0;
  border: 0;
  width: initial;
  color: #fff;
  height: 40px;
  font-size: 14px;
  padding: 0 18px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99dd99;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
/>
`;

exports[`Button small prop sets height and font-size 1`] = `
.c0 {
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  outline: none;
  text-decoration: none;
  font-weight: 600;
  cursor: pointer;
  border-radius: 2px;
  background-color: #007aff;
  border: 0;
  width: initial;
  color: #fff;
  height: 32px;
  font-size: 12px;
  padding: 0 12px;
}

.c0:disabled {
  opacity: 0.25;
}

.c0:hover {
  background-color: #99caff;
  border: 0;
}

.c0:hover {
  color: #fff;
}

<button
  className="c0"
/>
`;
